# NBody-Simulation-and-Visualization

./: CMakeLists.txt  README.txt  Sanitizers.cmake  demo  presentation.url
doc/: CMakeLists.txt  Doxyfile.in
doc/src/: mainpage.dox.in
include/NBody/: Concept.hpp  NBodyProgram.hpp
include/NBody/Concurrency/: Queue.hpp
include/NBody/Configuration/: ColorGenerator.hpp  Parser.hpp
include/NBody/Math/: Common.hpp  Matrix.hpp  Vector.hpp
include/NBody/Simulation/: BoundaryBox.hpp  BoundaryConditionHandler.hpp  CollisionDetector.hpp  CollisionResolver.hpp  Configuration.hpp  GravitySolver.hpp  InitialData.hpp  Integrator.hpp  Octree.hpp  Particle.hpp  Simulator.hpp
include/NBody/Visualization/: Camera.hpp  Configuration.hpp  GLLoader.hpp  Icosphere.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Visualizer.hpp
input/: 10000_particles_initial_data.txt  demo_initial_data.txt  solar_frame.txt
lib/NBody/Visualization/: Camera.cpp  GLLoader.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
nbody/: nbody.cpp
